[gd_scene load_steps=13 format=3 uid="uid://8uikrl1k17ve"]

[ext_resource type="Script" path="res://scenes/characters/enemy.gd" id="1_56mee"]
[ext_resource type="Texture2D" uid="uid://djegtw2p4ix8o" path="res://assets/peeceshipt.png" id="2_iku7c"]
[ext_resource type="Script" path="res://scripts/components/enemy_ai_component.gd" id="3_311je"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="4_5xjrc"]
[ext_resource type="Script" path="res://scripts/components/shooter_component.gd" id="5_ss1pt"]
[ext_resource type="PackedScene" uid="uid://yrhwlxsiqphe" path="res://scenes/bullets/bullet.tscn" id="6_ooec5"]
[ext_resource type="Script" path="res://scripts/components/death_component.gd" id="7_mieof"]
[ext_resource type="Script" path="res://scripts/components/drop_on_death_component.gd" id="8_tkxor"]
[ext_resource type="PackedScene" uid="uid://drvv0nxqk1k84" path="res://scenes/effects/explosion.tscn" id="9_1oh1u"]
[ext_resource type="PackedScene" uid="uid://d1u76vo1js3o2" path="res://scenes/powerups/health_pickup.tscn" id="10_ow2x4"]
[ext_resource type="PackedScene" uid="uid://iitsx7jjs4b1" path="res://scenes/powerups/fuel_pickup.tscn" id="11_uypbw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_34bpp"]
radius = 6.0

[node name="Enemy" type="PathFollow2D" node_paths=PackedStringArray("health_component", "shooter_component")]
script = ExtResource("1_56mee")
health_component = NodePath("Health_Component")
shooter_component = NodePath("Shooter_Component")
speed_growth = 1.0
health_growth = 1.0
bullet_speed_growth = 0.5
bullet_count_growth = 0.1
bullet_spread_growth = 0.1
damage_growth = 0.5

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, 1.19209e-07)
rotation = -1.5708
texture = ExtResource("2_iku7c")
hframes = 2

[node name="Enemy_AI_Component" type="Node" parent="." node_paths=PackedStringArray("shooter_component")]
script = ExtResource("3_311je")
firerate = 2.0
shooter_component = NodePath("../Shooter_Component")

[node name="Health_Component" type="Node" parent="."]
script = ExtResource("4_5xjrc")
max_health = 100
current_health = 100

[node name="Shooter_Component" type="Node2D" parent="."]
position = Vector2(4, 0)
rotation = -1.5708
script = ExtResource("5_ss1pt")
bullet_to_spawn = ExtResource("6_ooec5")

[node name="DeathComponent" type="Node" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("7_mieof")
health_component = NodePath("../Health_Component")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 133

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_34bpp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ExplosionOnDeathComponent" type="Node2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("8_tkxor")
is_guaranteed = true
to_spawn = Array[PackedScene]([ExtResource("9_1oh1u")])
health_component = NodePath("../Health_Component")

[node name="RegularDrops" type="Node2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("8_tkxor")
is_picked = true
base_odds_numerator = 20
to_spawn = Array[PackedScene]([ExtResource("10_ow2x4"), ExtResource("11_uypbw")])
health_component = NodePath("../Health_Component")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
